@@ -1,3 +1,12 @@
+2005-04-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* configure.ac (ac_libiberty_warn_cflags): Add -Wwrite-strings
+	-Wstrict-prototypes.
+	* configure, config.in: Regenerate.
+
+	* bsearch.c, index.c, rindex.c, strstr.c, strtol.c, waitpid.c: Fix
+	warnings and reconcile interfaces with relevant standards.
+
 2005-04-02  Ian Lance Taylor  <ian@airs.com>
 
 	* cp-demangle.c: Update copyright.
